--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,3 +2,46 @@
 .letter-color {
     color: white;
 }
+
+.link-logo {
+    display: block;
+    padding: 20px 25px;
+    border-bottom: 1px solid #25cbd3;
+}
+
+header nav ul {
+    padding: 0;
+    text-align: center;
+}
+
+header nav ul li {
+    display: inline-block;
+
+}
+
+header nav ul li:not(:last-child) {
+    margin-right: 15px ;
+
+}
+
+.menu1 li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu1 li a:hover{
+    color: #3bd42d;
+    text-decoration: underline;
+}
+
+@media only screen and (min-width: 992px) {
+    header {
+    position: relative;   
+ }
+    .menu1 {
+        position: absolute;
+        right: 2%;
+        top: 18%;
+    }
+  }
+    
